--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
     <section class="antigravity-float-section">
         <div class="container-fluid px-5">
             <div class="float-headline">
-                <h2>Smart Solutions is your agentic<br>development partner, evolving the<br>web into the <span
+                <h2>Smart Solutions is your agentic development partner, evolving the web into the <span
                         class="text-accent">performance era.</span></h2>
             </div>
 
