--- a/work.html
+++ b/work.html
@@ -52,7 +52,8 @@
                 <!-- 1. iLink Insurance -->
                 <a href="https://www.ilinkinsurance.com.au/" target="_blank" class="project-card">
                     <div class="project-image-wrapper">
-                        <img src="assets/images/ilink.png" alt="iLink Insurance" loading="lazy">
+                        <img src="assets/images/ilink.png" alt="iLink Insurance" width="1024" height="434"
+                            loading="lazy">
                     </div>
                     <div class="project-overlay">
                         <span class="project-cat">Insurance / Web App</span>
@@ -64,7 +65,8 @@
                 <!-- 2. Studio XAI -->
                 <a href="https://studioxai.global/" target="_blank" class="project-card">
                     <div class="project-image-wrapper">
-                        <img src="assets/images/studioxai.png" alt="Studio XAI" loading="lazy">
+                        <img src="assets/images/studioxai.png" alt="Studio XAI" width="1024" height="466"
+                            loading="lazy">
                     </div>
                     <div class="project-overlay">
                         <span class="project-cat">AI / Technology</span>
@@ -76,7 +78,8 @@
                 <!-- 3. Food Truck Insurance -->
                 <a href="https://foodtruckinsurance.com.au/" target="_blank" class="project-card">
                     <div class="project-image-wrapper">
-                        <img src="assets/images/foodtruck.png" alt="Food Truck Insurance" loading="lazy">
+                        <img src="assets/images/foodtruck.png" alt="Food Truck Insurance" width="1024" height="467"
+                            loading="lazy">
                     </div>
                     <div class="project-overlay">
                         <span class="project-cat">Niche Insurance</span>
@@ -88,7 +91,8 @@
                 <!-- 4. Plant Machinery -->
                 <a href="http://plantmachineryinsurance.com.au/" target="_blank" class="project-card">
                     <div class="project-image-wrapper">
-                        <img src="assets/images/machinery.png" alt="Plant Machinery Insurance" loading="lazy">
+                        <img src="assets/images/machinery.png" alt="Plant Machinery Insurance" width="1024" height="462"
+                            loading="lazy">
                     </div>
                     <div class="project-overlay">
                         <span class="project-cat">Industrial / Corporate</span>
@@ -100,7 +104,8 @@
                 <!-- 5. Rose of Australia -->
                 <a href="https://roseofaustraliahotel.com.au/" target="_blank" class="project-card">
                     <div class="project-image-wrapper">
-                        <img src="assets/images/rosehotel.png" alt="Rose of Australia Hotel" loading="lazy">
+                        <img src="assets/images/rosehotel.png" alt="Rose of Australia Hotel" width="1024" height="447"
+                            loading="lazy">
                     </div>
                     <div class="project-overlay">
                         <span class="project-cat">Hospitality / Lifestyle</span>
@@ -112,7 +117,8 @@
                 <!-- 6. Space Designs -->
                 <a href="http://spacedesigns.net/" target="_blank" class="project-card">
                     <div class="project-image-wrapper">
-                        <img src="assets/images/spacedesigns.png" alt="Space Designs" loading="lazy">
+                        <img src="assets/images/spacedesigns.png" alt="Space Designs" width="1024" height="461"
+                            loading="lazy">
                     </div>
                     <div class="project-overlay">
                         <span class="project-cat">Architecture / Design</span>
@@ -124,7 +130,7 @@
                 <!-- 7. Clinic GP -->
                 <a href="https://clinicgp.com/" target="_blank" class="project-card">
                     <div class="project-image-wrapper">
-                        <img src="assets/images/clinic.png" alt="Clinic GP" loading="lazy">
+                        <img src="assets/images/clinic.png" alt="Clinic GP" width="1024" height="465" loading="lazy">
                     </div>
                     <div class="project-overlay">
                         <span class="project-cat">Medical / Healthcare</span>
@@ -136,7 +142,7 @@
                 <!-- 8. SCITR -->
                 <a href="https://scitr.edu.in/" target="_blank" class="project-card">
                     <div class="project-image-wrapper">
-                        <img src="assets/images/scitr.png" alt="SCITR" loading="lazy">
+                        <img src="assets/images/scitr.png" alt="SCITR" width="1024" height="452" loading="lazy">
                     </div>
                     <div class="project-overlay">
                         <span class="project-cat">Education / Institution</span>
