--- a/work.html
+++ b/work.html
@@ -39,120 +39,123 @@
     </nav>
 
     <!-- Work Grid Section -->
-    <section class="work-grid-section">
-        <div class="container-fluid px-5">
-            <div class="row mb-5">
-                <div class="col-12">
-                    <span class="eyebrow">Selected Works</span>
-                    <h1 class="display-3 fw-bold">Recent Deployments</h1>
+    <main>
+        <section class="work-grid-section">
+            <div class="container-fluid px-5">
+                <div class="row mb-5">
+                    <div class="col-12">
+                        <span class="eyebrow">Selected Works</span>
+                        <h1 class="display-3 fw-bold">Recent Deployments</h1>
+                    </div>
+                </div>
+
+                <div class="work-gallery-grid">
+                    <!-- 1. iLink Insurance -->
+                    <a href="https://www.ilinkinsurance.com.au/" target="_blank" class="project-card">
+                        <div class="project-image-wrapper">
+                            <img src="assets/images/ilink.png" alt="iLink Insurance" width="1024" height="434"
+                                loading="lazy">
+                        </div>
+                        <div class="project-overlay">
+                            <span class="project-cat">Insurance / Web App</span>
+                            <h3 class="project-title">iLink Insurance</h3>
+                            <span class="project-arrow">&nearr;</span>
+                        </div>
+                    </a>
+
+                    <!-- 2. Studio XAI -->
+                    <a href="https://studioxai.global/" target="_blank" class="project-card">
+                        <div class="project-image-wrapper">
+                            <img src="assets/images/studioxai.png" alt="Studio XAI" width="1024" height="466"
+                                loading="lazy">
+                        </div>
+                        <div class="project-overlay">
+                            <span class="project-cat">AI / Technology</span>
+                            <h3 class="project-title">Studio XAI</h3>
+                            <span class="project-arrow">&nearr;</span>
+                        </div>
+                    </a>
+
+                    <!-- 3. Food Truck Insurance -->
+                    <a href="https://foodtruckinsurance.com.au/" target="_blank" class="project-card">
+                        <div class="project-image-wrapper">
+                            <img src="assets/images/foodtruck.png" alt="Food Truck Insurance" width="1024" height="467"
+                                loading="lazy">
+                        </div>
+                        <div class="project-overlay">
+                            <span class="project-cat">Niche Insurance</span>
+                            <h3 class="project-title">Food Truck Ins.</h3>
+                            <span class="project-arrow">&nearr;</span>
+                        </div>
+                    </a>
+
+                    <!-- 4. Plant Machinery -->
+                    <a href="http://plantmachineryinsurance.com.au/" target="_blank" class="project-card">
+                        <div class="project-image-wrapper">
+                            <img src="assets/images/machinery.png" alt="Plant Machinery Insurance" width="1024"
+                                height="462" loading="lazy">
+                        </div>
+                        <div class="project-overlay">
+                            <span class="project-cat">Industrial / Corporate</span>
+                            <h3 class="project-title">Plant Machinery</h3>
+                            <span class="project-arrow">&nearr;</span>
+                        </div>
+                    </a>
+
+                    <!-- 5. Rose of Australia -->
+                    <a href="https://roseofaustraliahotel.com.au/" target="_blank" class="project-card">
+                        <div class="project-image-wrapper">
+                            <img src="assets/images/rosehotel.png" alt="Rose of Australia Hotel" width="1024"
+                                height="447" loading="lazy">
+                        </div>
+                        <div class="project-overlay">
+                            <span class="project-cat">Hospitality / Lifestyle</span>
+                            <h3 class="project-title">Rose of Australia</h3>
+                            <span class="project-arrow">&nearr;</span>
+                        </div>
+                    </a>
+
+                    <!-- 6. Space Designs -->
+                    <a href="http://spacedesigns.net/" target="_blank" class="project-card">
+                        <div class="project-image-wrapper">
+                            <img src="assets/images/spacedesigns.png" alt="Space Designs" width="1024" height="461"
+                                loading="lazy">
+                        </div>
+                        <div class="project-overlay">
+                            <span class="project-cat">Architecture / Design</span>
+                            <h3 class="project-title">Space Designs</h3>
+                            <span class="project-arrow">&nearr;</span>
+                        </div>
+                    </a>
+
+                    <!-- 7. Clinic GP -->
+                    <a href="https://clinicgp.com/" target="_blank" class="project-card">
+                        <div class="project-image-wrapper">
+                            <img src="assets/images/clinic.png" alt="Clinic GP" width="1024" height="465"
+                                loading="lazy">
+                        </div>
+                        <div class="project-overlay">
+                            <span class="project-cat">Medical / Healthcare</span>
+                            <h3 class="project-title">Clinic GP</h3>
+                            <span class="project-arrow">&nearr;</span>
+                        </div>
+                    </a>
+
+                    <!-- 8. SCITR -->
+                    <a href="https://scitr.edu.in/" target="_blank" class="project-card">
+                        <div class="project-image-wrapper">
+                            <img src="assets/images/scitr.png" alt="SCITR" width="1024" height="452" loading="lazy">
+                        </div>
+                        <div class="project-overlay">
+                            <span class="project-cat">Education / Institution</span>
+                            <h3 class="project-title">SCITR</h3>
+                            <span class="project-arrow">&nearr;</span>
+                        </div>
+                    </a>
                 </div>
             </div>
-
-            <div class="work-gallery-grid">
-                <!-- 1. iLink Insurance -->
-                <a href="https://www.ilinkinsurance.com.au/" target="_blank" class="project-card">
-                    <div class="project-image-wrapper">
-                        <img src="assets/images/ilink.png" alt="iLink Insurance" width="1024" height="434"
-                            loading="lazy">
-                    </div>
-                    <div class="project-overlay">
-                        <span class="project-cat">Insurance / Web App</span>
-                        <h3 class="project-title">iLink Insurance</h3>
-                        <span class="project-arrow">&nearr;</span>
-                    </div>
-                </a>
-
-                <!-- 2. Studio XAI -->
-                <a href="https://studioxai.global/" target="_blank" class="project-card">
-                    <div class="project-image-wrapper">
-                        <img src="assets/images/studioxai.png" alt="Studio XAI" width="1024" height="466"
-                            loading="lazy">
-                    </div>
-                    <div class="project-overlay">
-                        <span class="project-cat">AI / Technology</span>
-                        <h3 class="project-title">Studio XAI</h3>
-                        <span class="project-arrow">&nearr;</span>
-                    </div>
-                </a>
-
-                <!-- 3. Food Truck Insurance -->
-                <a href="https://foodtruckinsurance.com.au/" target="_blank" class="project-card">
-                    <div class="project-image-wrapper">
-                        <img src="assets/images/foodtruck.png" alt="Food Truck Insurance" width="1024" height="467"
-                            loading="lazy">
-                    </div>
-                    <div class="project-overlay">
-                        <span class="project-cat">Niche Insurance</span>
-                        <h3 class="project-title">Food Truck Ins.</h3>
-                        <span class="project-arrow">&nearr;</span>
-                    </div>
-                </a>
-
-                <!-- 4. Plant Machinery -->
-                <a href="http://plantmachineryinsurance.com.au/" target="_blank" class="project-card">
-                    <div class="project-image-wrapper">
-                        <img src="assets/images/machinery.png" alt="Plant Machinery Insurance" width="1024" height="462"
-                            loading="lazy">
-                    </div>
-                    <div class="project-overlay">
-                        <span class="project-cat">Industrial / Corporate</span>
-                        <h3 class="project-title">Plant Machinery</h3>
-                        <span class="project-arrow">&nearr;</span>
-                    </div>
-                </a>
-
-                <!-- 5. Rose of Australia -->
-                <a href="https://roseofaustraliahotel.com.au/" target="_blank" class="project-card">
-                    <div class="project-image-wrapper">
-                        <img src="assets/images/rosehotel.png" alt="Rose of Australia Hotel" width="1024" height="447"
-                            loading="lazy">
-                    </div>
-                    <div class="project-overlay">
-                        <span class="project-cat">Hospitality / Lifestyle</span>
-                        <h3 class="project-title">Rose of Australia</h3>
-                        <span class="project-arrow">&nearr;</span>
-                    </div>
-                </a>
-
-                <!-- 6. Space Designs -->
-                <a href="http://spacedesigns.net/" target="_blank" class="project-card">
-                    <div class="project-image-wrapper">
-                        <img src="assets/images/spacedesigns.png" alt="Space Designs" width="1024" height="461"
-                            loading="lazy">
-                    </div>
-                    <div class="project-overlay">
-                        <span class="project-cat">Architecture / Design</span>
-                        <h3 class="project-title">Space Designs</h3>
-                        <span class="project-arrow">&nearr;</span>
-                    </div>
-                </a>
-
-                <!-- 7. Clinic GP -->
-                <a href="https://clinicgp.com/" target="_blank" class="project-card">
-                    <div class="project-image-wrapper">
-                        <img src="assets/images/clinic.png" alt="Clinic GP" width="1024" height="465" loading="lazy">
-                    </div>
-                    <div class="project-overlay">
-                        <span class="project-cat">Medical / Healthcare</span>
-                        <h3 class="project-title">Clinic GP</h3>
-                        <span class="project-arrow">&nearr;</span>
-                    </div>
-                </a>
-
-                <!-- 8. SCITR -->
-                <a href="https://scitr.edu.in/" target="_blank" class="project-card">
-                    <div class="project-image-wrapper">
-                        <img src="assets/images/scitr.png" alt="SCITR" width="1024" height="452" loading="lazy">
-                    </div>
-                    <div class="project-overlay">
-                        <span class="project-cat">Education / Institution</span>
-                        <h3 class="project-title">SCITR</h3>
-                        <span class="project-arrow">&nearr;</span>
-                    </div>
-                </a>
-            </div>
-        </div>
-    </section>
+        </section>
+    </main>
 
     <!-- Footer (Minimal) -->
     <footer class="py-5 border-top-custom text-center">
