--- a/work.html
+++ b/work.html
@@ -22,7 +22,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg bg-white fixed-top border-bottom-custom py-4">
         <div class="container-fluid px-5">
-            <a class="navbar-brand" href="index.html"><img src="assets/images/logo.png" alt="Smart Solutions"
+            <a class="navbar-brand" href="index.html"><img src="assets/images/logo.webp" alt="Smart Solutions"
                     height="40"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -53,7 +53,7 @@
                     <!-- 1. iLink Insurance -->
                     <a href="https://www.ilinkinsurance.com.au/" target="_blank" class="project-card">
                         <div class="project-image-wrapper">
-                            <img src="assets/images/ilink.png" alt="iLink Insurance" width="1024" height="434"
+                            <img src="assets/images/ilink.webp" alt="iLink Insurance" width="1024" height="434"
                                 loading="lazy">
                         </div>
                         <div class="project-overlay">
@@ -66,7 +66,7 @@
                     <!-- 2. Studio XAI -->
                     <a href="https://studioxai.global/" target="_blank" class="project-card">
                         <div class="project-image-wrapper">
-                            <img src="assets/images/studioxai.png" alt="Studio XAI" width="1024" height="466"
+                            <img src="assets/images/studioxai.webp" alt="Studio XAI" width="1024" height="466"
                                 loading="lazy">
                         </div>
                         <div class="project-overlay">
@@ -79,7 +79,7 @@
                     <!-- 3. Food Truck Insurance -->
                     <a href="https://foodtruckinsurance.com.au/" target="_blank" class="project-card">
                         <div class="project-image-wrapper">
-                            <img src="assets/images/foodtruck.png" alt="Food Truck Insurance" width="1024" height="467"
+                            <img src="assets/images/foodtruck.webp" alt="Food Truck Insurance" width="1024" height="467"
                                 loading="lazy">
                         </div>
                         <div class="project-overlay">
@@ -92,7 +92,7 @@
                     <!-- 4. Plant Machinery -->
                     <a href="http://plantmachineryinsurance.com.au/" target="_blank" class="project-card">
                         <div class="project-image-wrapper">
-                            <img src="assets/images/machinery.png" alt="Plant Machinery Insurance" width="1024"
+                            <img src="assets/images/machinery.webp" alt="Plant Machinery Insurance" width="1024"
                                 height="462" loading="lazy">
                         </div>
                         <div class="project-overlay">
@@ -105,7 +105,7 @@
                     <!-- 5. Rose of Australia -->
                     <a href="https://roseofaustraliahotel.com.au/" target="_blank" class="project-card">
                         <div class="project-image-wrapper">
-                            <img src="assets/images/rosehotel.png" alt="Rose of Australia Hotel" width="1024"
+                            <img src="assets/images/rosehotel.webp" alt="Rose of Australia Hotel" width="1024"
                                 height="447" loading="lazy">
                         </div>
                         <div class="project-overlay">
@@ -118,7 +118,7 @@
                     <!-- 6. Space Designs -->
                     <a href="http://spacedesigns.net/" target="_blank" class="project-card">
                         <div class="project-image-wrapper">
-                            <img src="assets/images/spacedesigns.png" alt="Space Designs" width="1024" height="461"
+                            <img src="assets/images/spacedesigns.webp" alt="Space Designs" width="1024" height="461"
                                 loading="lazy">
                         </div>
                         <div class="project-overlay">
@@ -131,7 +131,7 @@
                     <!-- 7. Clinic GP -->
                     <a href="https://clinicgp.com/" target="_blank" class="project-card">
                         <div class="project-image-wrapper">
-                            <img src="assets/images/clinic.png" alt="Clinic GP" width="1024" height="465"
+                            <img src="assets/images/clinic.webp" alt="Clinic GP" width="1024" height="465"
                                 loading="lazy">
                         </div>
                         <div class="project-overlay">
@@ -144,7 +144,7 @@
                     <!-- 8. SCITR -->
                     <a href="https://scitr.edu.in/" target="_blank" class="project-card">
                         <div class="project-image-wrapper">
-                            <img src="assets/images/scitr.png" alt="SCITR" width="1024" height="452" loading="lazy">
+                            <img src="assets/images/scitr.webp" alt="SCITR" width="1024" height="452" loading="lazy">
                         </div>
                         <div class="project-overlay">
                             <span class="project-cat">Education / Institution</span>
