--- a/index.html
+++ b/index.html
@@ -120,7 +120,8 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg bg-white fixed-top border-bottom-custom py-4">
         <div class="container-fluid px-5">
-            <a class="navbar-brand" href="#"><img src="assets/images/logo.webp" alt="Smart Solutions" height="40"></a>
+            <a class="navbar-brand" href="#"><img src="assets/images/logo.webp" alt="Smart Solutions" width="116"
+                    height="59" style="height: 40px; width: auto;"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
