--- a/work.html
+++ b/work.html
@@ -23,7 +23,7 @@
     <nav class="navbar navbar-expand-lg bg-white fixed-top border-bottom-custom py-4">
         <div class="container-fluid px-5">
             <a class="navbar-brand" href="index.html"><img src="assets/images/logo.webp" alt="Smart Solutions"
-                    height="40"></a>
+                    width="116" height="59" style="height: 40px; width: auto;"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
